--- a/templates/browse.html
+++ b/templates/browse.html
@@ -6,7 +6,7 @@
         <dt>Title:
         <dd><input type=text size=30 name=title>
         <dt>Author:
-        <dd><input type=text size=30 name=title>
+        <dd><input type=text size=30 name=author>
         <dd><input type=submit value=Add>
       </dl>
     </form>
