--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <title>4E Library</title>
-    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}">
+    <script src="{{ url_for('static', filename='vendor/jquery-1.10.2.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.js') }}"></script>
   </head>
   <body>
-    <div class=page>
+    <div class=container>
       <h1>4E Library</h1>
       <div class=metanav>
       {% if not session.logged_in %}
