--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,11 +4,12 @@
     <title>4E Library</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}">
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style/common.css') }}">
     <script src="{{ url_for('static', filename='vendor/jquery-1.10.2.min.js') }}"></script>
     <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.js') }}"></script>
   </head>
   <body>
-    <div class=container>
+    <div class="container-fluid">
       <h1>4E Library</h1>
       <div class=metanav>
       {% if not session.logged_in %}
